IMG-3 | Completed image gallery
Signed-off-by: Adeola Adeyemo <adeola.adeyemoj@yahoo.com>

--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -1,5 +1,14 @@
 // Globals
 $font-family: -apple-system, BlinkMacSystemFont, San Francisco, Helvetica Neue, Helvetica, Ubuntu, Roboto, Noto, Segoe UI, Arial, sans-serif;
 
+// Colors
+$grey: #6d7b91;
+$grey-dark: #253858;
+$grey-light: #8a898a;
+$grey-lighter: #dde2e9;
+$grey-med: #e6e6e6;
+$white: #fff;
+
 // Media Breakpoints
 $breakpoint-tablet: 768px;
+$breakpoint-mobile: 475px;
