--- a/src/assets/styles/components/_imagecard.scss
+++ b/src/assets/styles/components/_imagecard.scss
@@ -1,2 +1,105 @@
 // Image Card
 
+.image-card {
+  position: relative;
+  width: 100%;
+  min-height: 80vw;
+  border-radius: .5rem;
+  transition: height .3s ease;
+  cursor: zoom-in;
+
+  &__placeholder {
+    position: absolute;
+    left: 0;
+    border-radius: .5rem;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #f5f5f5;
+  }
+
+  &__loaded-image {
+    height: -webkit-fill-available;
+    width: 100%;
+    border-radius: .5rem;
+    object-fit: cover;
+    display: block;
+  }
+
+  &__placeholder-content,
+  &__content {
+    position: absolute;
+    width: 100%;
+    border-radius: .5rem;
+    bottom: 0;
+    left: 0;
+    padding: 1.25rem;
+  }
+
+  &__placeholder-content {
+
+    div {
+      background: $grey-med;
+      height: .8rem;
+    }
+
+    div:first-child {
+      width: 50%;
+      margin-bottom: .5rem;
+    }
+
+    div:last-child {
+      width: 30%;
+    }
+  }
+
+  &__overlay {
+    background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, .5));
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: .5rem;
+    bottom: 0;
+    left: 0;
+  }
+
+  &__button {
+    position: absolute;
+    background: transparent;
+    width: 100%;
+    height: 100%;
+    border-radius: .5rem;
+    bottom: 0;
+    padding: 0;
+    left: 0;
+    cursor: zoom-in;
+  }
+
+  &__content {
+
+    h4 {
+      font-size: .875rem;
+      color: $white;
+      margin-bottom: .25rem;
+    }
+
+    p {
+      font-size: .675rem;
+      color: $grey-lighter;
+    }
+  }
+
+  .lazyload-wrapper {
+    border-radius: .5rem;
+  }
+
+  @media (min-width: $breakpoint-mobile) {
+
+    min-height: 40vw;
+  }
+
+  @media (min-width: $breakpoint-tablet) {
+
+    min-height: 20vw;
+  }
+}
