--- a/src/assets/styles/components/_imagemodal.scss
+++ b/src/assets/styles/components/_imagemodal.scss
@@ -1,8 +1,59 @@
 // Image Modal
 
-button {
-  cursor: pointer;
-  font-weight: 500;
-  border: none;
-  outline: none;
+.image-modal {
+  position: relative;
+  width: 100%;
+
+  &__placeholder {
+    height: 60vw;
+    border-radius: .5rem .5rem 0 0;
+    @include animation('loading-animation 1s infinite');
+
+    @media (min-width: $breakpoint-mobile) {
+
+      height: 50vw;
+    }
+
+    @media (min-width: $breakpoint-tablet) {
+
+      height: 35vw;
+    }
+  }
+
+  &__loaded-image {
+    width: 100%;
+    display: block;
+    border-radius: .5rem .5rem 0 0;
+  }
+
+  &__content {
+    padding: 1.5rem 2rem;
+
+    h4 {
+      font-size: 1rem;
+      margin-bottom: .25rem;
+      color: $grey-dark;
+    }
+
+    p {
+      font-size: .75rem;
+      color: $grey-light;
+    }
+
+    @media (min-width: $breakpoint-mobile) {
+
+      h4 {
+        font-size: 1.125rem;
+      }
+    }
+
+    @media (min-width: $breakpoint-tablet) {
+      
+      padding: 2rem 3rem;
+
+      h4 {
+        margin-bottom: .425rem;
+      }
+    }
+  }
 }
