--- a/src/assets/styles/components/_modal.scss
+++ b/src/assets/styles/components/_modal.scss
@@ -2,12 +2,12 @@
 
 .modal {
   position: fixed;
-  background-color: rgba(65, 65, 65, .6);
+  background-color: rgba(0, 0, 0, .6);
   z-index: 1005;
   top: 0;
   left: 0;
-  height: 100vh;
   width: 100vw;
+  height: 100vh;
   overflow: auto;
 
   > div {
@@ -16,15 +16,13 @@
   }
 
   &__wrapper {
-    max-width: 1150px;
-    width: 94%;
-    max-height: 85vh;
-    overflow-y: auto;
+    padding: 3rem;
+    width: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border-radius: 10px;
+    overflow-y: auto;
     transition: visibility 800ms,
                 opacity 800ms;
 
@@ -32,20 +30,40 @@
       visibility: visible;
       opacity: 1;
     }
+
+    @media (min-width: $breakpoint-tablet) {
+
+      max-width: 800px;
+    }
   }
 
   &__body {
     position: relative;
+    background-color: white;
+    border-radius: .5rem;
   }
 
   &__button {
     position: absolute;
-    top: -2rem;
-    right: -2rem;
+    top: -1.5rem;
+    right: -1.5rem;
 
-    @media (max-width: $breakpoint-tablet) {
-      top: -1rem;
-      right: -1rem;
+    @media (min-width: $breakpoint-tablet) {
+      top: -2rem;
+      right: -2rem;
+    }
+  }
+
+  &__overlay-button {
+    position: fixed;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    background: none;
+
+    img {
+      display: none;
     }
   }
 }
