--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -1,2 +1,16 @@
 // Header
 
+.header {
+  background-color: $grey-lighter;
+  padding: 5rem 1.5rem;
+
+  @media (min-width: $breakpoint-mobile) {
+
+    padding: 5rem 2rem;
+  }
+
+  @media (min-width: $breakpoint-tablet) {
+
+    padding: 6rem 6rem 5rem;
+  }
+}
