--- a/src/assets/styles/components/_imagecard.scss
+++ b/src/assets/styles/components/_imagecard.scss
@@ -65,7 +65,7 @@
 
   &__button {
     position: absolute;
-    background: transparent;
+    background: none;
     width: 100%;
     height: 100%;
     border-radius: .5rem;
