IMG-13 | Image card edits
Signed-off-by: Adeola Adeyemo <adeola.adeyemoj@yahoo.com>

--- a/src/assets/styles/components/_imagecard.scss
+++ b/src/assets/styles/components/_imagecard.scss
@@ -19,7 +19,7 @@
   }
 
   &__loaded-image {
-    height: -webkit-fill-available;
+    height: 100%;
     width: 100%;
     border-radius: .5rem;
     object-fit: cover;
