--- a/src/assets/styles/components/_imagecard.scss
+++ b/src/assets/styles/components/_imagecard.scss
@@ -21,6 +21,7 @@
   &__loaded-image {
     height: 100%;
     width: 100%;
+    position: absolute;
     border-radius: .5rem;
     object-fit: cover;
     display: block;
@@ -92,6 +93,7 @@
   .lazyload-wrapper {
     border-radius: .5rem;
     height: 100%;
+    position: relative;
   }
 
   @media (min-width: $breakpoint-mobile) {
